--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,10 +22,11 @@ bincode= "1.3.3"
 anyhow= "1.0.42"
 hex= "0.4.3"
 x25519-dalek={ version = "1.1.1", features = ["serde"] }
-sosistab= "0.4.5"
+sosistab= "0.4.8"
+# sosistab={version="0.4.7", path="../sosistab"}
 blake3= "1.0.0"
 serde= "1.0.127"
-# mizaru={path="../lib/mizaru"}
+# mizaru={path="../lib/mizaru"} 
 once_cell= "1.8.0"
 smolscale = "0.3.11"
 smol-timeout = "0.6.0"
@@ -57,8 +58,18 @@ rustc-hash= "1.1.0"
 jemallocator= "0.3.2"
 
 futures-util= "0.3.16"
-geph4-binder-transport = "0.1.1"
-geph4-aioutils = "0.1.1"
+geph4-binder-transport = "0.1.3"
+geph4-aioutils = "0.1.2"
 geph4-protocol = "0.1.0"
-mizaru = "0.1.1"
-tundevice = "0.1.1"
+mizaru = "0.1.3"
+tundevice = "0.1.3"
+
+# reed-solomon-erasure = { version = "4.0.2", features = [ "simd-accel" ] }
+getset = "0.1.1"
+
+toml= "0.5.8"
+
+[profile.release]
+panic = "abort"
+opt-level=3
+# debug=2
