--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,18 +22,18 @@ bincode= "1.3.3"
 anyhow= "1.0.42"
 hex= "0.4.3"
 x25519-dalek={ version = "1.1.1", features = ["serde"] }
-sosistab= "0.4.8"
-# sosistab={version="0.4.7", path="../sosistab"}
+sosistab= "0.4.9"
+# sosistab={ path="../sosistab"}
 blake3= "1.0.0"
 serde= "1.0.127"
 # mizaru={path="../lib/mizaru"} 
 once_cell= "1.8.0"
 smolscale = "0.3.11"
-smol-timeout = "0.6.0"
+smol-timeout = "0.6.0" 
 statsd = "0.14.1"
 num_cpus= "1.13.0"
 scopeguard= "1.1.0"
-parking_lot= "0.11.1"
+parking_lot= "0.11.1" 
 # tundevice={path="../lib/tundevice"}
 jemalloc-ctl= "0.3.3"
 cidr= "0.1.1"
@@ -72,4 +72,7 @@ toml= "0.5.8"
 [profile.release]
 panic = "abort"
 opt-level=3
-# debug=2
+debug=2
+
+# [patch.crates-io]
+# sosistab={path="../sosistab"}
