--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ jobs:
       - checkout
       - run: cargo --version
       - run:
-          name: Run Tests
-          command: "cargo test"
+          name: Install musl toolchain
+          command: "rustup target add x86_64-unknown-linux-musl"
       - run:
           name: Build for musl
           command: "cargo build --locked --release --target x86_64-unknown-linux-musl"
