--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,5 +11,8 @@ jobs:
           name: Install musl toolchain
           command: "rustup target add x86_64-unknown-linux-musl"
       - run:
+          name: Musl include
+          command: "cd /usr/x86_64-linux-musl/include && ln -s /usr/include/asm-generic && ln -s /usr/include/asm && ln -s /usr/include/linux"
+      - run:
           name: Build for musl
           command: "cargo build --locked --release --target x86_64-unknown-linux-musl"
