--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/rust:1.53.0
+      - image: cimg/rust:1.53.0
     steps:
       - checkout
       - run: cargo --version
