--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,8 @@ jobs:
       - image: cimg/rust:1.53.0
     steps:
       - setup_remote_docker:
-        version: 19.03.13
+          version: 19.03.13
+          docker_layer_caching: true
       - checkout
       - run: cargo --version
       - run:
