--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,17 +2,11 @@ version: 2.1
 
 jobs:
   build:
-    docker:
-      - image: cimg/rust:1.53.0
+    working_directory: ~/repo/
+    machine:
+      image: ubuntu-2004:202008-01
     steps:
-      - setup_remote_docker:
-          version: 19.03.13
-          docker_layer_caching: true
       - checkout
-      - run: cargo --version
-      - run:
-          name: Install cross
-          command: "cargo install cross"
-      - run:
-          name: Build for musl
-          command: "CROSS_DOCKER_IN_DOCKER=true cross build --locked --release --target x86_64-unknown-linux-gnu"
+      - run: curl https://sh.rustup.rs -sSf | sh -s -- -y
+      - run: cargo install cross
+      - run: cross build --locked --release --target x86_64-unknown-linux-musl
