--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,19 +22,20 @@ bincode= "1.3.3"
 anyhow= "1.0.43"
 hex= "0.4.3"
 x25519-dalek={ version = "1.1.1", features = ["serde"] }
-sosistab= "0.4.22"
+sosistab= "0.4.29"
 # sosistab={ path="../sosistab"}
 blake3= "1.0.0"
 serde= "1.0.130"
 # mizaru={path="../lib/mizaru"} 
 once_cell= "1.8.0"
-smolscale = "0.3.12"
+smolscale = "0.3.16"
+# smolscale={path="../smolscale"}
 smol-timeout = "0.6.0"
 statsd = "0.14.1"
 num_cpus= "1.13.0"
 scopeguard= "1.1.0"
 parking_lot= "0.11.2"
-# tundevice={path="../lib/tundevice"}
+# tundevice={path="../lib/tundevice"} 
 jemalloc-ctl= "0.3.3"
 cidr= "0.1.1"
 bytes= "1.1.0"
@@ -60,7 +61,7 @@ jemallocator= "0.3.2"
 futures-util= "0.3.17"
 geph4-binder-transport = "0.1.3"
 geph4-aioutils = "0.1.3"
-geph4-protocol = "0.1.0"
+geph4-protocol = "0.1.1"
 mizaru = "0.1.3"
 tundevice = "0.1.3"
 
@@ -73,7 +74,8 @@ serde_json = "1.0.67"
 [profile.release]
 panic = "abort"
 opt-level=3
-debug=2
+debug=0
+lto=false
 
 # [patch.crates-io]
 # sosistab={path="../sosistab"}
