--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ bincode= "1.3.3"
 anyhow= "1.0.43"
 hex= "0.4.3"
 x25519-dalek={ version = "1.1.1", features = ["serde"] }
-sosistab= "0.4.29"
+sosistab= "0.4.35"
 # sosistab={ path="../sosistab"}
 blake3= "1.0.0"
 serde= "1.0.130"
@@ -70,12 +70,13 @@ getset = "0.1.1"
 
 toml= "0.5.8"
 serde_json = "1.0.67"
+flume = "0.10.9"
 
 [profile.release]
 panic = "abort"
 opt-level=3
 debug=0
-lto=false
+# lto=false
 
 # [patch.crates-io]
 # sosistab={path="../sosistab"}
