--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ getset = "0.1.1"
 toml= "0.5.8"
 serde_json = "1.0.68"
 flume = "0.10.9"
+event-listener = "2.5.1"
 
 [profile.release]
 panic = "abort"
