--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,24 +15,24 @@ repository="https://github.com/geph-official/geph4-exit"
 smol= "1.2.5"
 env_logger = "0.9.0"
 log= "0.4.14"
-structopt= "0.3.25"
+structopt= "0.3.26"
 ed25519-dalek={ version = "1.0.1", features = ["serde"] }
 rand= "0.7.3"
 bincode= "1.3.3"
-anyhow= "1.0.44"
+anyhow= "1.0.53"
 hex= "0.4.3"
 x25519-dalek={ version = "1.2.0", features = ["serde"] }
-sosistab= "0.4.39"
+sosistab= "0.4.44"
 #sosistab={ path="../sosistab"}
-blake3= "1.1.0"
-serde= "1.0.130"
+blake3= "1.3.1"
+serde= "1.0.136"
 # mizaru={path="../lib/mizaru"} 
-once_cell= "1.8.0"
-smolscale = "0.3.16"
+once_cell= "1.9.0"
+smolscale = "0.3.17"
 # smolscale={path="../smolscale"}
 smol-timeout = "0.6.0"
 statsd = "0.14.1"
-num_cpus= "1.13.0"
+num_cpus= "1.13.1"
 scopeguard= "1.1.0"
 parking_lot= "0.11.2"
 # tundevice={path="../lib/tundevice"} 
@@ -41,24 +41,24 @@ cidr= "0.1.1"
 bytes= "1.1.0"
 lru= "0.6.6"
 pnet_packet= "0.28.0"
-rangemap= "0.1.13"
+rangemap= "0.1.14"
 dashmap= "4.0.2"
 governor= "0.3.2"
 # aioutils={path="../lib/aioutils"}
 # vpn_structs={path="../lib/vpn_structs"}
 
-libc= "0.2.105"
+libc= "0.2.116"
 os_socketaddr= "0.2.0"
 ureq= "1.5.5"
 flate2= "1.0.22"
 async-dup= "1.2.2"
-fastrand= "1.5.0"
+fastrand= "1.7.0"
 
-cached= "0.24.1"
+cached= "0.26.2"
 rustc-hash= "1.1.0"
 jemallocator= "0.3.2"
 
-futures-util= "0.3.17"
+futures-util= "0.3.19"
 geph4-binder-transport = "0.1.3"
 geph4-aioutils = "0.1.3"
 geph4-protocol = "0.2.0"
@@ -66,12 +66,13 @@ mizaru = "0.1.3"
 tundevice = "0.1.4"
 
 # reed-solomon-erasure = { version = "4.0.2", features = [ "simd-accel" ] }
-getset = "0.1.1"
+getset = "0.1.2"
 
 toml= "0.5.8"
-serde_json = "1.0.68"
-flume = "0.10.9"
-event-listener = "2.5.1"
+serde_json = "1.0.78"
+flume = "0.10.10"
+event-listener = "2.5.2"
+tap = "1.0.1"
 
 [profile.release]
 panic = "abort"
