--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ env_logger = "0.9.0"
 log= "0.4.17"
 structopt= "0.3.26"
 ed25519-dalek={ version = "1.0.1", features = ["serde"] }
-rand= "0.7.3"
+rand = "0.7.3"
 bincode= "1.3.3"
 anyhow= "1.0.58"
 hex= "0.4.3"
@@ -28,7 +28,7 @@ blake3= "1.3.1"
 serde= "1.0.137"
 # mizaru={path="../lib/mizaru"} 
 once_cell= "1.12.0"
-smolscale = "0.3.26"
+smolscale = "0.3.29"
 # smolscale={path="../smolscale"}
 smol-timeout = "0.6.0"
 statsd = "0.14.1"
@@ -37,7 +37,6 @@ scopeguard= "1.1.0"
 parking_lot= "0.11.2"
 # tundevice={path="../lib/tundevice"} 
 jemalloc-ctl= "0.3.3"
-cidr= "0.1.1"
 bytes= "1.1.0"
 lru= "0.6.6"
 pnet_packet= "0.28.0"
@@ -73,6 +72,10 @@ serde_json = "1.0.81"
 flume = "0.10.13"
 event-listener = "2.5.2"
 tap = "1.0.1"
+moka = "0.9.4"
+cidr-utils = {version="0.5.7", features=["serde"]}
+socket2 = "0.4.7"
+byteorder = "1.4.3"
 
 [profile.release]
 panic = "abort"
