--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ bincode= "1.3.3"
 anyhow= "1.0.58"
 hex= "0.4.3"
 x25519-dalek={ version = "1.2.0", features = ["serde"] }
-sosistab= "0.4.44"
+sosistab= "=0.4.45"
 #sosistab={ path="../sosistab"}
 blake3= "1.3.1"
 serde= "1.0.137"
