--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,8 @@ geph4-binder-transport = "0.1.3"
 geph4-aioutils = "0.1.3"
 geph4-protocol = "0.2.0"
 mizaru = "0.1.3"
-tundevice = "0.1.4"
+# tundevice = "0.1.4"
+tun="0.5.4"
 
 # reed-solomon-erasure = { version = "4.0.2", features = [ "simd-accel" ] }
 getset = "0.1.2"
