--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,7 +61,7 @@ geph4-protocol = "0.2.0"
 mizaru = "0.1.3"
 # tundevice = "0.1.4"
 tun="0.5.4"
-
+rand_chacha="0.2"
 # reed-solomon-erasure = { version = "4.0.2", features = [ "simd-accel" ] }
 getset = "0.1.2"
 
