--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ num_cpus= "1.13.1"
 scopeguard= "1.1.0"
 parking_lot= "0.11.2"
 # tundevice={path="../lib/tundevice"} 
-jemalloc-ctl= "0.3.3"
+# jemalloc-ctl= "0.3.3"
 bytes= "1.2.1"
 lru= "0.6.6"
 pnet_packet= "0.28.0"
@@ -52,7 +52,6 @@ fastrand= "1.8.0"
 
 cached= "0.26.2"
 rustc-hash= "1.1.0"
-jemallocator= "0.3.2"
 
 futures-util= "0.3.24"
 geph4-binder-transport = "0.1.3"
@@ -77,6 +76,9 @@ byteorder = "1.4.3"
 nix = "0.25.0"
 async-trait = "0.1.57"
 smol_str = "0.1.23"
+sysinfo = "0.26.5"
+
+mimalloc = { version = "0.1.30", default-features = false }
 
 [profile.release]
 panic = "abort"
