--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,9 +54,9 @@ cached= "0.26.2"
 rustc-hash= "1.1.0"
 
 futures-util= "0.3.24"
-geph4-binder-transport = "0.1.3"
+
 geph4-aioutils = "0.1.3"
-geph4-protocol = "0.4.13"
+geph4-protocol = "0.8.1"
 mizaru = "0.1.3"
 # tundevice = "0.1.4"
 tun= "0.5.4"
@@ -79,6 +79,7 @@ smol_str = "0.1.23"
 sysinfo = "0.26.5"
 
 mimalloc = { version = "0.1.30"}
+stdcode = "0.1.13"
 
 [profile.release]
 panic = "abort"
