--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,13 +23,10 @@ anyhow= "1.0.65"
 hex= "0.4.3"
 x25519-dalek={ version = "1.2.0", features = ["serde"] }
 sosistab= "0.5"
-#sosistab={ path="../sosistab"}
 blake3= "1.3.1"
 serde= "1.0.145"
-# mizaru={path="../lib/mizaru"} 
-once_cell= "1.15.0"
-smolscale = "0.3.42"
-# smolscale={path="../smolscale"}
+once_cell= "1.15.0" 
+smolscale = "0.3.52"
 smol-timeout = "0.6.0"
 statsd = "0.14.1"
 num_cpus= "1.13.1"
@@ -38,7 +35,7 @@ parking_lot= "0.11.2"
 # tundevice={path="../lib/tundevice"} 
 # jemalloc-ctl= "0.3.3"
 bytes= "1.2.1"
-lru= "0.6.6"
+
 pnet_packet= "0.28.0"
 rangemap= "0.1.14"
 dashmap= "4.0.2"
@@ -56,12 +53,11 @@ rustc-hash= "1.1.0"
 futures-util= "0.3.24"
 
 geph4-aioutils = "0.1.3"
-geph4-protocol = "0.8.1"
+# geph4-protocol = "0.8.1"
+geph4-protocol={path="../geph4-protocol"}
 mizaru = "0.1.3"
-# tundevice = "0.1.4"
 tun= "0.5.4"
 rand_chacha= "0.2.2"
-# reed-solomon-erasure = { version = "4.0.2", features = [ "simd-accel" ] }
 getset = "0.1.2"
 
 toml= "0.5.9"
@@ -80,6 +76,8 @@ sysinfo = "0.26.5"
 
 mimalloc = { version = "0.1.30"}
 stdcode = "0.1.13"
+sosistab2 = "0.2"
+nanorpc = "0.1.12"
 
 [profile.release]
 panic = "abort"
