--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,8 +53,8 @@ rustc-hash= "1.1.0"
 futures-util= "0.3.24"
 
 geph4-aioutils = "0.1.3"
-# geph4-protocol = "0.8.1"
-geph4-protocol={path="../geph4-protocol"}
+geph4-protocol = "0.9"
+# geph4-protocol={path="../geph4-protocol"}
 mizaru = "0.1.3"
 tun= "0.5.4"
 rand_chacha= "0.2.2"
