--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,7 @@ rustc-hash= "1.1.0"
 futures-util= "0.3.24"
 
 geph4-aioutils = "0.1.3"
-geph4-protocol = "0.9"
+geph4-protocol = "0.11"
 # geph4-protocol={path="../geph4-protocol"}
 mizaru = "0.1.3"
 tun= "0.5.4"
@@ -74,7 +74,7 @@ async-trait = "0.1.58"
 smol_str = "0.1.23"
 sysinfo = "0.26.5"
 
-mimalloc = { version = "0.1.30"}
+mimalloc = { version = "0.1.30", default-features=false}
 stdcode = "0.1.13"
 sosistab2 = "0.3"
 nanorpc = "0.1.12"
