--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,7 @@ sosistab2 = "0.3"
 nanorpc = "0.1.12"
 closure = "0.3.0"
 async-recursion = "1.0.0"
+arrayref = "0.3.6"
 
 [profile.release]
 panic = "abort"
