--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,8 @@ nanorpc = "0.1.12"
 closure = "0.3.0"
 async-recursion = "1.0.0"
 arrayref = "0.3.6"
+native-tls = "0.2.11"
+rcgen = "0.10.0"
 
 [profile.release]
 panic = "abort"
