--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,7 @@ async-recursion = "1.0.0"
 arrayref = "0.3.6"
 native-tls = "0.2.11"
 rcgen = "0.10.0"
+priority-async-mutex = "0.1.1"
 
 [profile.release]
 panic = "abort"
