--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,6 +84,7 @@ arrayref = "0.3.6"
 native-tls = "0.2.11"
 rcgen = "0.10.0"
 priority-async-mutex = "0.1.1"
+atomic_float = "0.1.0"
 
 [profile.release]
 panic = "abort"
