--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,9 +91,9 @@ atomic_float = "0.1.0"
 dhat = "0.3.2"
 
 [profile.release]
-panic = "abort"
+# panic = "abort"
 opt-level=3
-debug=2
+debug=1
 # lto=false
 
 [features]
