--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,12 +88,12 @@ native-tls = "0.2.11"
 rcgen = "0.10.0"
 priority-async-mutex = "0.1.1"
 atomic_float = "0.1.0"
-jemallocator = "0.5.0"
+#jemallocator = "0.5.0"
 # jemallocator-global = "0.3.2"
 
 
 [profile.release]
-panic = "abort"
+#panic = "abort"
 opt-level=3
 debug=1
 # lto=false
