--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,6 +89,7 @@ rcgen = "0.10.0"
 priority-async-mutex = "0.1.1"
 atomic_float = "0.1.0"
 jemallocator = "0.5.0"
+priority-queue = "1.3.1"
 # jemallocator-global = "0.3.2"
 
 
