--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,9 +76,9 @@ sysinfo = "0.26.9"
 
 # mimalloc = { version = "0.1.30", default-features=false}
 stdcode = "0.1.14"
-# sosistab2 = "0.8"
+sosistab2 = "0.9.3"
 
-sosistab2={git="https://github.com/geph-official/sosistab2"}
+# sosistab2={git="https://github.com/geph-official/sosistab2"}
 
 nanorpc = "0.1.12"
 closure = "0.3.0"
