Update sosistab2 to use the refactor branch from GitHub, add sosistab2-obfsudp and sosistab2-obfstls dependencies, and adjust relevant code imports and usages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,11 +76,13 @@ sysinfo = "0.26.9"
 
 # mimalloc = { version = "0.1.30", default-features=false}
 stdcode = "0.1.14"
-sosistab2 = "0.9.7"
+# sosistab2 = "0.9.7"
 
-# sosistab2={git="https://github.com/geph-official/sosistab2"}
+sosistab2={git="https://github.com/geph-official/sosistab2", branch="refactor"}
+sosistab2-obfsudp={git="https://github.com/geph-official/sosistab2-obfsudp"}
+sosistab2-obfstls={git="https://github.com/geph-official/sosistab2-obfstls"}
 
-nanorpc = "0.1.12"
+nanorpc = "0.1.12" 
 closure = "0.3.0"
 async-recursion = "1.0.5"
 arrayref = "0.3.7"
