--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license="GPL-3.0-only"
 repository="https://github.com/geph-official/geph4-exit"
 
 [patch.crates-io]
-sosistab2={git="https://github.com/geph-official/sosistab2"}
+# sosistab2={git="https://github.com/geph-official/sosistab2"}
 
 
 
