--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "geph4-exit"
-version = "0.10.0"
+version = "0.11.0"
 authors = ["nullchinchilla <nullchinchilla@pm.me>", "Geph Project <contact@geph.io"]
 edition = "2021"
 description="Exit node for Geph"
@@ -8,7 +8,7 @@ license="GPL-3.0-only"
 repository="https://github.com/geph-official/geph4-exit"
 
 [patch.crates-io]
-sosistab2={git="https://github.com/geph-official/sosistab2"}
+#sosistab2={git="https://github.com/geph-official/sosistab2"}
 
 
 
