--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,6 +96,7 @@ priority-async-mutex = "0.1.1"
 atomic_float = "0.1.0"
 jemallocator = "0.5.4"
 priority-queue = "1.3.2"
+time = "0.3.34"
 # jemallocator-global = "0.3.2"
 
 
