--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license="GPL-3.0-only"
 repository="https://github.com/geph-official/geph4-exit"
 
 [patch.crates-io]
-# sosistab2={git="https://github.com/geph-official/sosistab2"}
+sosistab2={git="https://github.com/geph-official/sosistab2"}
 
 
 
@@ -25,7 +25,7 @@ rand = "0.7.3"
 bincode= "1.3.3"
 anyhow= "1.0.75"
 hex= "0.4.3"
-x25519-dalek={ version = "1.2.0", features = ["serde"] }
+x25519-dalek={ version = "1", features = ["serde"] }
 
 blake3= "1.5.0"
 serde= "1.0.188"
@@ -82,7 +82,7 @@ sysinfo = "0.26.9"
 stdcode = "0.1.14"
 # sosistab2 = "0.9.7"
 
-sosistab2="0.10.8"
+sosistab2="0.10.21"
 sosistab2-obfsudp="0.1"
 sosistab2-obfstls="0.1"
 
